--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>나를 소개하는 페이지</h1>
+        <p>지금부터 내가 하는 이야기</p>
     </header>
     <nav>
         <a href="src/addFriend.html">1번</a> <a href="src/addFriend.html">2번</a> <a href="src/addFriend.html">3번</a>
